Bug 492731 - RKWard crashes when I try to load a local plugin
Summary: RKWard crashes when I try to load a local plugin
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: User Interface (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-06 22:50 UTC by Alfredo Sánchez
Modified: 2024-09-07 08:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-3441363-0.html (7.12 KB, text/html)
2024-09-07 08:51 UTC, Alfredo Sánchez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alfredo Sánchez 2024-09-06 22:50:34 UTC
SUMMARY

RKWard crashes when I try to open a pluginmap from a local plugin.

STEPS TO REPRODUCE
1. Start RKWard.
2. Go to menu Preferences > Manage R packages and plugins.
3. Got to Manage RKWard plugins tab.
4. Click Add button.
5. Select a pluginmap of a local plugin (for instance plots.pluginmap)
6. Click Open.

OBSERVED RESULT

The program crashes.

EXPECTED RESULT

The local plugin must be loaded.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Arch Linux with Wayland
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 5.116.0
Qt Version: 5.15.15
Comment 1 Thomas Friedrichsmeier 2024-09-07 07:28:01 UTC
Git commit 1a2d253c5f9a30c3294f8bc300753e60b18b91ed by Thomas Friedrichsmeier.
Committed on 07/09/2024 at 07:27.
Pushed by tfry into branch 'master'.

Fix crash when manually adding pluginmaps

M  +1    -0    ChangeLog
M  +1    -1    rkward/settings/rksettingsmoduleplugins.cpp

https://invent.kde.org/education/rkward/-/commit/1a2d253c5f9a30c3294f8bc300753e60b18b91ed
Comment 2 Thomas Friedrichsmeier 2024-09-07 07:30:12 UTC
Git commit 36787a323b6b2a7a51ded370bb6fda5d66d5fcc9 by Thomas Friedrichsmeier.
Committed on 07/09/2024 at 07:29.
Pushed by tfry into branch 'kf5'.

Fix crash when manually adding pluginmaps

M  +1    -0    ChangeLog
M  +1    -1    rkward/settings/rksettingsmoduleplugins.cpp

https://invent.kde.org/education/rkward/-/commit/36787a323b6b2a7a51ded370bb6fda5d66d5fcc9
Comment 3 Thomas Friedrichsmeier 2024-09-07 07:40:33 UTC
Thanks for reporting! I don't know, how you are installing RKWard, but this is fixed in your git repository, now, and will be fixed in our next builds (AppImage at https://cdn.kde.org/ci-builds/education/rkward/).

In case you need a workaround before that, you can edit ~/.config/rkwardrc, and add your file to "All known plugin maps" below "[Plugin Settings]", while RKWard is not running.
Comment 4 Alfredo Sánchez 2024-09-07 08:51:02 UTC
Created attachment 173395 [details]
attachment-3441363-0.html

Thank you for your quick answer!
I tried the workaround but did not work for me.
So, I have installed the last development version from source and it works.
Regards!

________________________________
Alfredo Sánchez Alberca
Departamento de Matemáticas y Ciencia de Datos
Director del Grado de Ingeniería Matemática
Escuela Politécnica Superior
Universidad San Pablo CEU
Urbanización Montepríncipe, s/n
28668 Boadilla del Monte
Tel. +34 913724710
Web: https://aprendeconalf.es
________________________________
De: rkward-devel <rkward-devel-bounces@kde.org> en nombre de Thomas Friedrichsmeier <bugzilla_noreply@kde.org>
Enviado: sábado, 7 de septiembre de 2024 9:40
Para: rkward-devel@kde.org <rkward-devel@kde.org>
Asunto: [rkward] [Bug 492731] RKWard crashes when I try to load a local plugin

ATENCIÓN: Correo externo - No haga clic en enlaces o archivos adjuntos
a menos que esté seguro de la procedencia del mensaje

https://urldefense.com/v3/__https://bugs.kde.org/show_bug.cgi?id=492731__;!!D9dNQwwGXtA!Tom7kZaRoeTxWoOoGgbZutl2qAMgmD2JnjKA_Nkng2TIHvVsDKSXzuRgXCtPKKMW6U1Savb7Lso74V30--aGtz4$

Thomas Friedrichsmeier <thomas.friedrichsmeier@kdemail.net> changed:

           What    |Removed                     |Added
----------------------------------------------------------------------------
                 CC|                            |thomas.friedrichsmeier@kdem
                   |                            |ail.net

--- Comment #3 from Thomas Friedrichsmeier <thomas.friedrichsmeier@kdemail.net> ---
Thanks for reporting! I don't know, how you are installing RKWard, but this is
fixed in your git repository, now, and will be fixed in our next builds
(AppImage at https://urldefense.com/v3/__https://cdn.kde.org/ci-builds/education/rkward/__;!!D9dNQwwGXtA!Tom7kZaRoeTxWoOoGgbZutl2qAMgmD2JnjKA_Nkng2TIHvVsDKSXzuRgXCtPKKMW6U1Savb7Lso74V30APkhiLs$ ).

In case you need a workaround before that, you can edit ~/.config/rkwardrc, and
add your file to "All known plugin maps" below "[Plugin Settings]", while
RKWard is not running.

--
You are receiving this mail because:
You are the assignee for the bug.


[https://www.uchceu.es/img/logos/wur.jpg]


Este mensaje y sus archivos adjuntos, enviados desde FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU, pueden contener información confidencial y está destinado a ser leído sólo por la persona a la que va dirigido, por lo que queda prohibida la difusión, copia o utilización de dicha información por terceros. Si usted lo recibiera por error, por favor, notifíquelo al remitente y destruya el mensaje y cualquier documento adjunto que pudiera contener. Cualquier información, opinión, conclusión, recomendación, etc. contenida en el presente mensaje no relacionada con la actividad de FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU, y/o emitida por persona no autorizada para ello, deberá considerarse como no proporcionada ni aprobada por FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU, que pone los medios a su alcance para garantizar la seguridad y ausencia de errores en la correspondencia electrónica, pero no puede asegurar la inexistencia de virus o la no alteración de los documentos transmitidos electrónicamente, por lo que declina cualquier responsabilidad a este respecto.

This message and its attachments, sent from FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU, may contain confidential information and is intended to be read only by the person it is directed. Therefore any disclosure, copying or use by third parties of this information is prohibited. If you receive this in error, please notify the sender and destroy the message and any attachments may contain. Any information, opinion, conclusion, recommendation,... contained in this message and which is unrelated to the business activity of FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU and/or issued by unauthorized personnel, shall be considered unapproved by FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU. FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU implements control measures to ensure, as far as possible, the security and reliability of all its electronic correspondence. However, FUNDACIÓN UNIVERSITARIA SAN PABLO-CEU does not guarantee that emails are virus-free or that documents have not be altered, and does not take responsibility in this respect.