Fix crash when manually adding pluginmaps

BUG: 492731